# minivirt

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Readme.md  conftest.py  miv  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: Database.md  Development.md  Images.md  VMs.md
minivirt/: __main__.py  build.py  cache.py  cli.py  configs.py  db.py  exceptions.py  qemu.py  qmp.py  remotes.py  statusline.py  utils.py  vms.py
minivirt/contrib/: alpine.py  ci.py  githubactions.py  systemd.py
minivirt/tests/: conftest.py  ssh_config  test_images.py  test_ssh.py  test_teardown.py
recipes/: alpine-3.15.yaml  alpine-3.16.yaml  alpine-ci-base.yaml  arch.yaml  ci-alpine.yaml  githubactions-alpine.yaml  githubactions-ubuntu-22.04.yaml  ubuntu-20.04.yaml  ubuntu-22.04.yaml
requirements/: base.in  base.txt  dev.in  dev.txt
tests/: conftest.py  ssh_config  test_doctor.py  test_fsck.py  test_images.py  test_memory.py  test_network.py  test_recipes.py  test_run.py  test_ssh.py  test_teardown.py  test_vms.py
tests/contrib/: test_alpine.py  test_ci.py
