[metadata]
name = minivirt
version = 0.0.1
author = Alex Morega
author_email = alex@grep.ro
description = lightweight virtual machine manager
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/mgax/minivirt
project_urls =
  Bug Tracker = https://github.com/mgax/minivirt/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages =
  minivirt
  minivirt.contrib
include_package_data = True
python_requires = >=3.8
install_requires =
  boto3
  click
  pyyaml

[options.entry_points]
console_scripts =
  miv = minivirt.cli:cli

[options.extras_require]
githubactions = pygithub; pyngrok; waitress
